--- a/character_list/server/package.json
+++ b/character_list/server/package.json
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.5.2"
   },
-  "devDependencies": {},
   "description": ""
 }
